# custom-data-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEBUG_SUMMARY.md  IMMEDIATE_FIX.md  Procfile  README.md  install.ps1  install.sh  nixpacks.toml  package.json  pyproject.toml  railway_start.sh  railway_start_mcp.sh  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: bigquery.md  caching.md  data-governance.md  failure-handling.md  index.md  observability.md
agents/: data-admin.md  data-analyst.md  query-fixer.md  system-doctor.md
commands/: doctor.md  init.md  setup.md
docs/: CROSS_PLATFORM_SETUP.md  INSTALL.md  MCP_API_INTEGRATION.md  MIGRATION_v0.5_to_v0.6.md  VISION.md  architecture-flowchart.html  install-guide.html  quick-setup.md
docs/architecture/: caching.md
docs/research/: bigquery-governance-best-practices.md  (+4 more)
hooks/: hooks.json  run-hook.cmd  run-hook.sh
plugin/: .mcp.json  README.md  install.ps1  install.sh
rules/: MOAWIN_AKHUWAT_RULES_SUMMARY.md  bigquery.md  data-governance.md  index.md  versioning.md
scripts/: seed_dashboard_data.py
tests/: test_audit_logger.py  test_bump.py  test_cli.py  test_config.py  test_cost_estimator.py  test_domain_classifier.py  test_errors.py  test_feedback_logger.py  test_feedback_model.py  test_governance_mapper.py  test_models.py  test_partition_validator.py  test_query_builder.py  test_query_fixer.py  test_rule_engine.py  test_server.py  test_system_doctor.py  test_ticket_logger.py  test_ticket_model.py  test_tools_governance.py  test_update_hook.py
(+148 files in other folders)
