[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taleemabad-data-mcp"
version = "0.10.0"
description = "Taleemabad's Data Navigator — governed semantic layer for BigQuery"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "google-cloud-bigquery>=3.25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "click>=8.0",
]

[project.scripts]
taleemabad-data-mcp = "taleemabad_data_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taleemabad_data_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/taleemabad_data_mcp/dashboard/pages/*.py" = ["N999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
